[three] remove click buttons on mobile on flight game to put back drag solved

--- a/src/components/MiniGame/MiniGame.scss
+++ b/src/components/MiniGame/MiniGame.scss
@@ -2,7 +2,6 @@
 
 .miniGame {
   color: $white;
-  padding: 2rem 1rem;
   height: 100%;
 
   .gameInfos {
