--- a/src/components/Three/MoonGame/Instructions/instructions.scss
+++ b/src/components/Three/MoonGame/Instructions/instructions.scss
@@ -2,15 +2,15 @@
   position: absolute;
   color: white;
   z-index: 10;
-  top: 50vh;
+  top: 47%;
   left: 50%;
-  width: 90vw;
+  width: 90%;
   transform: translateX(-50%);
   .instructions {
     justify-content: center;
     display: flex;
     background: white;
-    height: 11vh;
+    padding: 0.5em 0;
     align-items: center;
     border-radius: 0 0 4px 4px;
     div {
